Feature/extra fields list (#48)
* mix

* extra fields method

* test for extra

* fixes after review

* response json updated

* swagger docs

* initial cache

* initial cache

* response updated

* response typespec, lazy init

* passed a fn into a param; updated spec and module
