# lib/cgrates_web_jsonapi_web/router.ex
@@ -104,6 +104,7 @@ defmodule CgratesWebJsonapiWeb.Router do
     post("/tp-timings/delete_all", TpTimingController, :delete_all)
     resources("/tp-timings", TpTimingController, except: [:new, :edit])
     resources("/users", UserController, except: [:new, :edit])
+    resources("/cdr-extra-fields", CdrExtraFieldController, only: [:index])
     resources("/cdr-stats", CdrStatController, only: [:index])
     resources("/tenants", TenantController, only: [:show, :update])
   end
